PapeteCompiler/Grammar/PapeteParser.py
# Generated from Grammar/Papete.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class PapeteParser ( Parser ):

    grammarFileName = "Papete.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'('", "'0'", "')'", "','", "'!'", 
                     "'+'", "'='", "'-'", "'*'", "'/'", "'%'", "'gramaticaextensao'", 
                     "'import'", "'true'", "'false'", "'for'", "'while'", 
                     "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'||'", 
                     "'if'", "'&&'", "'else'", "'print'", "'main'", "'int'", 
                     "'float'", "'double'", "'string'", "'void'", "'boolean'", 
                     "'read'", "'return'", "'{'", "'}'", "';'", "'global'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "GRAMATICA", "IMPORT", "TRUE", "FALSE", 
                      "FOR", "WHILE", "GRT", "LESS", "GRTEQ", "LESSEQ", 
                      "EQ", "NEQ", "OR", "IF", "AND", "ELSE", "PRINT", "MAIN", 
                      "INT", "FLOAT", "DOUBLE", "STRING", "VOID", "BOOL", 
                      "READ", "RET", "OBR", "CBR", "EOL", "GLOBAL", "STRVALUE", 
                      "VAR", "PRINTCONC", "NUMDOUBLE", "NUMINT", "COMMENT", 
                      "LINE_COMMENT", "WS", "COM" ]

    RULE_prog = 0
    RULE_line = 1
    RULE_func = 2
    RULE_cmd = 3
    RULE_callfunc = 4
    RULE_while_ = 5
    RULE_for_ = 6
    RULE_ifstmt = 7
    RULE_cond = 8
    RULE_cdand = 9
    RULE_cndts = 10
    RULE_relop = 11
    RULE_read = 12
    RULE_print_ = 13
    RULE_init_ = 14
    RULE_retr = 15
    RULE_atr = 16
    RULE_expr = 17
    RULE_term = 18
    RULE_fact = 19
    RULE_type_ = 20

    ruleNames =  [ "prog", "line", "func", "cmd", "callfunc", "while_", 
                   "for_", "ifstmt", "cond", "cdand", "cndts", "relop", 
                   "read", "print_", "init_", "retr", "atr", "expr", "term", 
                   "fact", "type_" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    GRAMATICA=13
    IMPORT=14
    TRUE=15
    FALSE=16
    FOR=17
    WHILE=18
    GRT=19
    LESS=20
    GRTEQ=21
    LESSEQ=22
    EQ=23
    NEQ=24
    OR=25
    IF=26
    AND=27
    ELSE=28
    PRINT=29
    MAIN=30
    INT=31
    FLOAT=32
    DOUBLE=33
    STRING=34
    VOID=35
    BOOL=36
    READ=37
    RET=38
    OBR=39
    CBR=40
    EOL=41
    GLOBAL=42
    STRVALUE=43
    VAR=44
    PRINTCONC=45
    NUMDOUBLE=46
    NUMINT=47
    COMMENT=48
    LINE_COMMENT=49
    WS=50
    COM=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PapeteParser.EOF, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PapeteParser.LineContext)
            else:
                return self.getTypedRuleContext(PapeteParser.LineContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(PapeteParser.EOL)
            else:
                return self.getToken(PapeteParser.EOL, i)

        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PapeteParser.FuncContext)
            else:
                return self.getTypedRuleContext(PapeteParser.FuncContext,i)


        def IMPORT(self):
            return self.getToken(PapeteParser.IMPORT, 0)

        def LESS(self):
            return self.getToken(PapeteParser.LESS, 0)

        def VAR(self):
            return self.getToken(PapeteParser.VAR, 0)

        def GRAMATICA(self):
            return self.getToken(PapeteParser.GRAMATICA, 0)

        def GRT(self):
            return self.getToken(PapeteParser.GRT, 0)

        def prog(self):
            return self.getTypedRuleContext(PapeteParser.ProgContext,0)


        def getRuleIndex(self):
            return PapeteParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = PapeteParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PapeteParser.PRINT, PapeteParser.INT, PapeteParser.FLOAT, PapeteParser.DOUBLE, PapeteParser.STRING, PapeteParser.VOID, PapeteParser.BOOL, PapeteParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 46
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 42
                        self.line()
                        self.state = 43
                        self.match(PapeteParser.EOL)
                        pass

                    elif la_ == 2:
                        self.state = 45
                        self.func()
                        pass


                    self.state = 48 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PapeteParser.PRINT) | (1 << PapeteParser.INT) | (1 << PapeteParser.FLOAT) | (1 << PapeteParser.DOUBLE) | (1 << PapeteParser.STRING) | (1 << PapeteParser.VOID) | (1 << PapeteParser.BOOL) | (1 << PapeteParser.VAR))) != 0)):
                        break

                self.state = 50
                self.match(PapeteParser.EOF)
                pass
            elif token in [PapeteParser.IMPORT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(PapeteParser.IMPORT)
                self.state = 53
                self.match(PapeteParser.LESS)
                self.state = 54
                self.match(PapeteParser.VAR)
                self.state = 55
                self.match(PapeteParser.T__0)
                self.state = 56
                self.match(PapeteParser.GRAMATICA)
                self.state = 57
                self.match(PapeteParser.GRT)
                self.state = 58
                self.match(PapeteParser.EOL)
                self.state = 59
                self.prog()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PapeteParser.RULE_line

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AtrLineContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atr(self):
            return self.getTypedRuleContext(PapeteParser.AtrContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtrLine" ):
                listener.enterAtrLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtrLine" ):
                listener.exitAtrLine(self)


    class InitLineContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def init_(self):
            return self.getTypedRuleContext(PapeteParser.Init_Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitLine" ):
                listener.enterInitLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitLine" ):
                listener.exitInitLine(self)


    class PrintLineContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_(self):
            return self.getTypedRuleContext(PapeteParser.Print_Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintLine" ):
                listener.enterPrintLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintLine" ):
                listener.exitPrintLine(self)


    class CallFuncLineContext(LineContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.LineContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def callfunc(self):
            return self.getTypedRuleContext(PapeteParser.CallfuncContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallFuncLine" ):
                listener.enterCallFuncLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallFuncLine" ):
                listener.exitCallFuncLine(self)



    def line(self):

        localctx = PapeteParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = PapeteParser.AtrLineContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.atr()
                pass

            elif la_ == 2:
                localctx = PapeteParser.PrintLineContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.print_()
                pass

            elif la_ == 3:
                localctx = PapeteParser.InitLineContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.init_()
                pass

            elif la_ == 4:
                localctx = PapeteParser.CallFuncLineContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.callfunc()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PapeteParser.Type_Context)
            else:
                return self.getTypedRuleContext(PapeteParser.Type_Context,i)


        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(PapeteParser.VAR)
            else:
                return self.getToken(PapeteParser.VAR, i)

        def OBR(self):
            return self.getToken(PapeteParser.OBR, 0)

        def retr(self):
            return self.getTypedRuleContext(PapeteParser.RetrContext,0)


        def CBR(self):
            return self.getToken(PapeteParser.CBR, 0)

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PapeteParser.CmdContext)
            else:
                return self.getTypedRuleContext(PapeteParser.CmdContext,i)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(PapeteParser.EOL)
            else:
                return self.getToken(PapeteParser.EOL, i)

        def VOID(self):
            return self.getToken(PapeteParser.VOID, 0)

        def MAIN(self):
            return self.getToken(PapeteParser.MAIN, 0)

        def RET(self):
            return self.getToken(PapeteParser.RET, 0)

        def INT(self):
            return self.getToken(PapeteParser.INT, 0)

        def getRuleIndex(self):
            return PapeteParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = PapeteParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.type_()
                self.state = 69
                self.match(PapeteParser.VAR)
                self.state = 70
                self.match(PapeteParser.T__1)
                self.state = 82
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PapeteParser.INT, PapeteParser.FLOAT, PapeteParser.DOUBLE, PapeteParser.STRING, PapeteParser.BOOL]:
                    self.state = 77 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 71
                        self.type_()
                        self.state = 72
                        self.match(PapeteParser.VAR)
                        self.state = 75
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==PapeteParser.EOL:
                            self.state = 74
                            self.match(PapeteParser.EOL)


                        self.state = 79 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PapeteParser.INT) | (1 << PapeteParser.FLOAT) | (1 << PapeteParser.DOUBLE) | (1 << PapeteParser.STRING) | (1 << PapeteParser.BOOL))) != 0)):
                            break

                    pass
                elif token in [PapeteParser.T__2]:
                    self.state = 81
                    self.match(PapeteParser.T__2)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 84
                self.match(PapeteParser.T__3)
                self.state = 85
                self.match(PapeteParser.OBR)
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 86
                    self.cmd()
                    self.state = 89 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PapeteParser.FOR) | (1 << PapeteParser.WHILE) | (1 << PapeteParser.IF) | (1 << PapeteParser.PRINT) | (1 << PapeteParser.INT) | (1 << PapeteParser.FLOAT) | (1 << PapeteParser.DOUBLE) | (1 << PapeteParser.STRING) | (1 << PapeteParser.BOOL) | (1 << PapeteParser.READ) | (1 << PapeteParser.VAR))) != 0)):
                        break

                self.state = 91
                self.retr()
                self.state = 92
                self.match(PapeteParser.CBR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(PapeteParser.VOID)
                self.state = 95
                self.match(PapeteParser.VAR)
                self.state = 96
                self.match(PapeteParser.T__1)
                self.state = 108
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PapeteParser.INT, PapeteParser.FLOAT, PapeteParser.DOUBLE, PapeteParser.STRING, PapeteParser.BOOL]:
                    self.state = 103 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 97
                        self.type_()
                        self.state = 98
                        self.match(PapeteParser.VAR)
                        self.state = 101
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==PapeteParser.EOL:
                            self.state = 100
                            self.match(PapeteParser.EOL)


                        self.state = 105 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PapeteParser.INT) | (1 << PapeteParser.FLOAT) | (1 << PapeteParser.DOUBLE) | (1 << PapeteParser.STRING) | (1 << PapeteParser.BOOL))) != 0)):
                            break

                    pass
                elif token in [PapeteParser.T__2]:
                    self.state = 107
                    self.match(PapeteParser.T__2)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 110
                self.match(PapeteParser.T__3)
                self.state = 111
                self.match(PapeteParser.OBR)
                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 112
                    self.cmd()
                    self.state = 115 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PapeteParser.FOR) | (1 << PapeteParser.WHILE) | (1 << PapeteParser.IF) | (1 << PapeteParser.PRINT) | (1 << PapeteParser.INT) | (1 << PapeteParser.FLOAT) | (1 << PapeteParser.DOUBLE) | (1 << PapeteParser.STRING) | (1 << PapeteParser.BOOL) | (1 << PapeteParser.READ) | (1 << PapeteParser.VAR))) != 0)):
                        break

                self.state = 117
                self.match(PapeteParser.CBR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                _la = self._input.LA(1)
                if not(_la==PapeteParser.INT or _la==PapeteParser.VOID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 120
                self.match(PapeteParser.MAIN)
                self.state = 121
                self.match(PapeteParser.T__1)
                self.state = 122
                self.match(PapeteParser.T__2)
                self.state = 123
                self.match(PapeteParser.T__3)
                self.state = 124
                self.match(PapeteParser.OBR)
                self.state = 126 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 125
                    self.cmd()
                    self.state = 128 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PapeteParser.FOR) | (1 << PapeteParser.WHILE) | (1 << PapeteParser.IF) | (1 << PapeteParser.PRINT) | (1 << PapeteParser.INT) | (1 << PapeteParser.FLOAT) | (1 << PapeteParser.DOUBLE) | (1 << PapeteParser.STRING) | (1 << PapeteParser.BOOL) | (1 << PapeteParser.READ) | (1 << PapeteParser.VAR))) != 0)):
                        break

                self.state = 130
                self.match(PapeteParser.RET)
                self.state = 131
                self.match(PapeteParser.T__2)
                self.state = 132
                self.match(PapeteParser.EOL)
                self.state = 133
                self.match(PapeteParser.CBR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PapeteParser.RULE_cmd

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncCmdContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def callfunc(self):
            return self.getTypedRuleContext(PapeteParser.CallfuncContext,0)

        def EOL(self):
            return self.getToken(PapeteParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCmd" ):
                listener.enterFuncCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCmd" ):
                listener.exitFuncCmd(self)


    class InitCmdContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def init_(self):
            return self.getTypedRuleContext(PapeteParser.Init_Context,0)

        def EOL(self):
            return self.getToken(PapeteParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitCmd" ):
                listener.enterInitCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitCmd" ):
                listener.exitInitCmd(self)


    class WhileCmdContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_(self):
            return self.getTypedRuleContext(PapeteParser.While_Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileCmd" ):
                listener.enterWhileCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileCmd" ):
                listener.exitWhileCmd(self)


    class ForCmdContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def for_(self):
            return self.getTypedRuleContext(PapeteParser.For_Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForCmd" ):
                listener.enterForCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForCmd" ):
                listener.exitForCmd(self)


    class PrintCmdContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_(self):
            return self.getTypedRuleContext(PapeteParser.Print_Context,0)

        def EOL(self):
            return self.getToken(PapeteParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintCmd" ):
                listener.enterPrintCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintCmd" ):
                listener.exitPrintCmd(self)


    class AtrCmdContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def atr(self):
            return self.getTypedRuleContext(PapeteParser.AtrContext,0)

        def EOL(self):
            return self.getToken(PapeteParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtrCmd" ):
                listener.enterAtrCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtrCmd" ):
                listener.exitAtrCmd(self)


    class ReadCmdContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def read(self):
            return self.getTypedRuleContext(PapeteParser.ReadContext,0)

        def EOL(self):
            return self.getToken(PapeteParser.EOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadCmd" ):
                listener.enterReadCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadCmd" ):
                listener.exitReadCmd(self)


    class IfCmdContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PapeteParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifstmt(self):
            return self.getTypedRuleContext(PapeteParser.IfstmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfCmd" ):
                listener.enterIfCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfCmd" ):
                listener.exitIfCmd(self)



    def cmd(self):

        localctx = PapeteParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_cmd)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                localctx = PapeteParser.AtrCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.atr()
                self.state = 138
                self.match(PapeteParser.EOL)
                pass

            elif la_ == 2:
                localctx = PapeteParser.InitCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.init_()
                self.state = 141
                self.match(PapeteParser.EOL)
                pass

            elif la_ == 3:
                localctx = PapeteParser.PrintCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.print_()
                self.state = 144
                self.match(PapeteParser.EOL)
                pass

            elif la_ == 4:
                localctx = PapeteParser.ReadCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.read()
                self.state = 147
                self.match(PapeteParser.EOL)
                pass

            elif la_ == 5:
                localctx = PapeteParser.IfCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 149
                self.ifstmt()
                pass

            elif la_ == 6:
                localctx = PapeteParser.WhileCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 150
                self.while_()
                pass

            elif la_ == 7:
                localctx = PapeteParser.ForCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 151
                self.for_()
                pass

            elif la_ == 8:
                localctx = PapeteParser.FuncCmdContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 152
                self.callfunc()
                self.state = 153
                self.match(PapeteParser.EOL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallfuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(PapeteParser.VAR)
            else:
                return self.getToken(PapeteParser.VAR, i)

        def NUMINT(self, i:int=None):
            if i is None:
                return self.getTokens(PapeteParser.NUMINT)
            else:
                return self.getToken(PapeteParser.NUMINT, i)

        def NUMDOUBLE(self, i:int=None):
            if i is None:
                return self.getTokens(PapeteParser.NUMDOUBLE)
            else:
                return self.getToken(PapeteParser.NUMDOUBLE, i)

        def getRuleIndex(self):
            return PapeteParser.RULE_callfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallfunc" ):
                listener.enterCallfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallfunc" ):
                listener.exitCallfunc(self)




    def callfunc(self):
